--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,115 @@
-.App {
+
+
+
+
+.movielist{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 20px;
+}
+
+.card{
+  background: rgb(35, 157, 159);
+background: linear-gradient(0deg, rgb(203, 50, 94) 0%, rgb(80, 49, 205) 100%);
+  border-radius: 20px;
+  padding: 35px;
+  list-style: none;
+  height: 85%;
+  width: 75%;
+  
+
+}
+.title{
+  font-size: 25px;
+  color: rgb(167, 215, 22);
+}
+.fav-heart{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+.fav-heart p{
+  font-weight: 700;
+}
+.fav-icon{
+  height: 25px;
+  width: 50px;
+}
+.navbar{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  background: rgb(131,58,180);
+background: linear-gradient(90deg, rgb(170, 86, 142) 0%, rgb(58, 26, 188) 13%, rgb(42, 200, 74) 100%);
+}
+.nav{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 60%;
+}
+.nav li{
+  background-color: rgb(109, 188, 117);
+  padding: 10px;
+  border-radius: 15px;
+  list-style: none;
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.nav li a{
+  text-decoration: none;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.search input{
+  padding: 10px;
+  border-radius: 15px;
+  border: none;
+  margin-right: 5px;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.search button{ 
+   background-color: rgb(109, 188, 117);
+   padding: 10px;
+   border-radius: 15px;
+   text-align: center;
+   border: none;
+}
+.homebtns{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
+  gap: 100px;
+ justify-content: center;
+ align-items: center;
+ height: 100vh;
+ background: rgb(131,58,180);
+background: linear-gradient(90deg, rgb(155, 51, 139) 0%, rgb(30, 30, 189) 13%, rgb(28, 178, 46) 100%);
 
-.App-link {
-  color: #61dafb;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.homebtns button{
+  padding: 200px;
+  font-size: 60px;
+  font-weight: bold;
+  cursor: pointer;
+  border-radius: 10px;
+  border:none;
+  background-color: rgb(120, 186, 134);
+}
+.pagination{
+  display: flex;
+  width: 100%;
+  gap: 20px;
+  margin-bottom: 40px;
+  margin-top: 20px;
+}
+.pagination button{
+  padding: 5px 35px;
+  border: none;
+  border-radius: 5px;
+  background: rgb(131,58,180);
+background: linear-gradient(90deg, rgba(131,58,180,1) 0%, rgba(253,29,29,1) 13%, rgba(252,176,69,1) 100%);
+font-size: 20px;
+font-weight: bold;
+cursor: pointer;
+}
+.pagination button:disabled{
+  background: none;
+  background-color: gray;
+ 
 }
